# coalsack

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  install-vcpkg.sh
docker/: Dockerfile  build.sh  deploy.sh
docs/: Makefile  conf.py  core.rst  ext.rst  image.rst  index.rst  messages.rst  network.rst  nodes.rst  rpc.rst  tensor.rst  util.rst
include/: chat_template.h  data_stream_common.h  data_stream_receiver.h  data_stream_transmitter.h  dynamic_mx_tensor.h  dynamic_mx_tensor_message.h  dynamic_tensor.h  dynamic_tensor_message.h  gguf_dequant.h  gguf_loader.h  gguf_multi_loader.h  gguf_types.h  gpt2_tokenizer.h  gpt_oss_engine.h  graph_proc.h  graph_proc_cv.h  graph_proc_img.h  graph_proc_registry.h  graph_proc_tensor.h  graphviz_exporter.h  imgproc.h  llama_backend.h  model_io_nodes.h  moe_weight_provider.h  nn_nodes.h  nn_op_node.h  onnx_importer.h  onnx_model_io_nodes.h  result_message.h  result_message_nodes.h  rpc_client.h  rpc_common.h  rpc_server.h  syncer.h  utils.h
include/coalsack/camera/: camera.h
include/coalsack/core/: graph_edge.h  graph_message.h  graph_node.h  graph_proc.h  graph_proc_client.h  graph_proc_registry.h  graph_proc_server.h  subgraph.h
include/coalsack/data_stream/: data_stream_common.h  data_stream_receiver.h  data_stream_transmitter.h
include/coalsack/ext/: blob_detector.h  graph_proc_action.h  graph_proc_cv_ext.h  graph_proc_depthai.h  graph_proc_jpeg.h  graph_proc_libcamera.h  graph_proc_lz4.h  graph_proc_rs_d435.h  libcamera_capture.h
include/coalsack/gguf/: gguf_dequant.h  gguf_loader.h  gguf_multi_loader.h  gguf_types.h
include/coalsack/image/: frame_message.h  graph_proc_cv.h  image.h  image_message.h  image_nodes.h  imgproc.h
include/coalsack/llm/: eagle3_speculative_decoder.h  gpt2_tokenizer.h  gpt_oss_engine.h  graph_builder.h  llm_engine.h  moe_weight_provider.h  sampler.h  vision_encoder.h
include/coalsack/math/: types.h
include/coalsack/messages/: blob_message.h  graph_messages.h  list_message.h  number_message.h  object_message.h  text_message.h
include/coalsack/network/: broadcast_listener_node.h  broadcast_talker_node.h  p2p_listener_node.h  p2p_talker_node.h  p2p_tcp_listener_node.h  p2p_tcp_talker_node.h
include/coalsack/nn/: model_io_nodes.h  nn_nodes.h  nn_op_node.h  result_message.h  result_message_nodes.h
include/coalsack/nodes/: buffer_node.h  callback_nodes.h  clock_buffer_node.h  console_node.h  demux_node.h  fifo_node.h  heartbeat_node.h  mux_node.h  passthrough_node.h
include/coalsack/onnx/: onnx_importer.h  onnx_model_io_nodes.h  (+1 more)
include/ext/: blob_detector.h  graph_proc_cv.h  graph_proc_cv_ext.h  graph_proc_depthai.h  graph_proc_jpeg.h  graph_proc_libcamera.h  graph_proc_lz4.h  graph_proc_rs_d435.h  libcamera_capture.h
include/nn_ops/: add_node.h  and_node.h  cast_node.h  clip_node.h  concat_node.h  constant_node.h  constant_of_shape_node.h  conv_node.h  cos_node.h  div_node.h  elementwise_helpers.h  embedding_lookup_node.h  equal_node.h  erf_node.h  exp_node.h  expand_node.h  expert_merge_node.h  expert_mlp_node.h  expert_selector_node.h  flatten_node.h  gather_elements_node.h  gather_node.h  greater_node.h  grid_sample_node.h  grouped_attention_node.h  layer_normalization_node.h  log_node.h  log_softmax_node.h  matmul_mixed_node.h  matmul_node.h  matmul_transpose_mixed_node.h  max_pool_node.h  mod_node.h  moe_expert_weight_slice_node.h  moe_router_node.h  moe_weight_fetch_node.h  mul_node.h  neg_node.h  non_zero_node.h  not_node.h  (+25 more)
sample/: CMakeLists.txt  client.cpp  server.cpp
sample/depthai-color/: CMakeLists.txt  depthai_color.cpp
sample/dnn/: CMakeLists.txt  dnn.cpp
sample/faster-voxelpose/: CMakeLists.txt  faster_voxelpose.cpp
sample/faster-voxelpose/data/backbone.onnx.chunks/: metadata.txt
sample/faster-voxelpose/data/joint_conv_net.onnx.chunks/: metadata.txt
sample/faster-voxelpose/data/joint_weight_net.onnx.chunks/: chunk_0000  metadata.txt
sample/faster-voxelpose/data/pose_c2c_net.onnx.chunks/: chunk_0000  metadata.txt
sample/faster-voxelpose/data/pose_center_net.onnx.chunks/: metadata.txt
sample/greeting/: CMakeLists.txt  greeting.cpp
sample/mvp/: CMakeLists.txt  mvp.cpp
sample/pymafx/: CMakeLists.txt  pymafx.cpp
sample/server/: CMakeLists.txt  server.cpp
sample/superpoint-lightglue/: CMakeLists.txt  superpoint_lightglue.cpp
sample/superpoint-lightglue/data/: restore_onnx.py  split_onnx.py
sample/superpoint-lightglue/data/superpoint_lightglue_pipeline.onnx.chunks/: metadata.txt
sample/voxelpose/: CMakeLists.txt  voxelpose.cpp
sample/voxelpose/data/backbone.onnx.chunks/: metadata.txt
sample/voxelpose/data/pose_v2v_net.onnx.chunks/: chunk_0001  metadata.txt
sample/voxelpose/data/proposal_v2v_net.onnx.chunks/: chunk_0001  metadata.txt
src/: chat_template.cpp  gguf_loader.cpp  gguf_multi_loader.cpp  gpt2_tokenizer.cpp  gpt_oss_engine.cpp  llama_backend.cpp  moe_weight_provider.cpp  onnx_importer.cpp  onnx_proto_parser.cpp  rpc_client.cpp  rpc_server.cpp
src/gguf/: gguf_loader.cpp  gguf_multi_loader.cpp
src/llm/: chat_template.cpp  eagle3_speculative_decoder.cpp  gpt2_tokenizer.cpp  gpt_oss_engine.cpp  llm_engine.cpp  moe_weight_provider.cpp  vision_encoder.cpp
src/onnx/: onnx_importer.cpp  onnx_proto_parser.cpp
src/rpc/: rpc_client.cpp  rpc_server.cpp
test/: CMakeLists.txt  bench_expert_mlp_mxfp4.cpp  bench_matmul_transpose.cpp  chat_template_test_data.json  eagle3_speculative_decoding_test_data.json  generation_test_data.json  syncer_test.cpp  tensor_test.cpp  test_chat_template.cpp  test_eagle3_speculative_decoding.cpp  test_expert_mlp.cpp  test_float16.cpp  test_frame_sync.cpp  test_generation.cpp  test_gguf_dequant.cpp  test_gguf_loader.cpp  test_gpt_oss_engine.cpp  test_grouped_attention.cpp  test_llama_backend.cpp  test_llm_engine.cpp  test_moe_router.cpp  test_nn_nodes.cpp  test_onnx_parser.cpp  test_rmsnorm.cpp  test_rope.cpp  test_superpoint_lightglue.cpp  test_syncer.cpp  test_tensor.cpp  test_tokenizer.cpp  test_vision_encoder.cpp
(+82 files in other folders)
